<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.niulbird.clubmgr</groupId>
    <artifactId>clubmgr</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Club Mgr</name>

    <modules>
        <module>clubmgr-bfc</module>
        <module>clubmgr-jobs</module>
        <module>clubmgr-data</module>
        <module>clubmgr-email</module>
        <module>clubmgr-db</module>
        <module>clubmgr-util</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.3.11</spring-boot.version>
	<spring.security.version>6.3.3</spring.security.version>
        <postgresql.version>42.7.2</postgresql.version>
	<flyway.version>9.22.3</flyway.version>
	<hibernate.version>6.6.1.Final</hibernate.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <scope>test</scope>
    		<exclusions>
                    <exclusion>
                        <groupId>org.json</groupId>
                        <artifactId>json</artifactId>
                    </exclusion>
                    <exclusion>
            		<groupId>com.vaadin.external.google</groupId>
            		<artifactId>android-json</artifactId>
        		</exclusion>
                    </exclusions>
		</dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>

